Kai's snow deformation first version!

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -17,3 +17,7 @@ TargetedHardwareClass=Desktop
 AppliedTargetedHardwareClass=Desktop
 DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
+
+[/Script/Engine.RendererSettings]
+r.CustomDepth=3
+
