Revert "kai tps character commit"
This reverts commit 7e1de5fad788709d165cf31685cf9376d7beec8b.

# Conflicts:
#	Content/Kai/Fire_montage.uasset
#	Content/Kai/MyAnimation.uasset
#	Content/Kai/SnowBoiMap.umap
#	Content/Kai/SnowBoiMap_BuiltData.uasset

--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -95,6 +95,8 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="Crouch",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=None)
 +ActionMappings=(ActionName="Aim",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=RightMouseButton)
 +ActionMappings=(ActionName="Fire",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftMouseButton)
++ActionMappings=(ActionName="Collect",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=F)
++ActionMappings=(ActionName="Build",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=T)
 +AxisMappings=(AxisName="LookUp",Scale=-1.000000,Key=MouseY)
 +AxisMappings=(AxisName="MoveForward",Scale=-1.000000,Key=S)
 +AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=W)
