--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/ThirdPersonCPP/Maps/ThirdPersonExampleMap
-EditorStartupMap=/Game/ThirdPersonCPP/Maps/ThirdPersonExampleMap
-GlobalDefaultGameMode=/Script/Engine.GameModeBase
+EditorStartupMap=/Game/Maps/AlphaMap.AlphaMap
+GlobalDefaultGameMode=/Script/ProjectGoat.ProjectGoatGameMode
 
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
 MinimumiOSVersion=IOS_11
@@ -87,5 +87,3 @@ AppliedDefaultGraphicsPerformance=Maximum
 
 [/Script/Engine.RendererSettings]
 r.CustomDepth=3
-
-
