--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -98,6 +98,7 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="Collect",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=F)
 +ActionMappings=(ActionName="Build",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=T)
 +ActionMappings=(ActionName="Distract",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=C)
++ActionMappings=(ActionName="SelectTower",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftShift)
 +AxisMappings=(AxisName="LookUp",Scale=-1.000000,Key=MouseY)
 +AxisMappings=(AxisName="MoveForward",Scale=-1.000000,Key=S)
 +AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=W)
