--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,6 +1,6 @@
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/ThirdPersonCPP/Maps/ThirdPersonExampleMap
-EditorStartupMap=/Game/Maps/AlphaMap.AlphaMap
+GameDefaultMap=/Game/CC/ThirdPersonCPP/Maps/Start.Start
+EditorStartupMap=/Game/CC/ThirdPersonCPP/Maps/Start.Start
 GlobalDefaultGameMode=/Script/ProjectGoat.ProjectGoatGameMode
 
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
