terrain.umap added

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -19,6 +19,9 @@ DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
 
 
+[/Script/Engine.RendererSettings]
+r.CustomDepth=3
+
 [/Script/Engine.CollisionProfile]
 -Profiles=(Name="NoCollision",CollisionEnabled=NoCollision,ObjectTypeName="WorldStatic",CustomResponses=((Channel="Visibility",Response=ECR_Ignore),(Channel="Camera",Response=ECR_Ignore)),HelpMessage="No collision",bCanModify=False)
 -Profiles=(Name="BlockAll",CollisionEnabled=QueryAndPhysics,ObjectTypeName="WorldStatic",CustomResponses=,HelpMessage="WorldStatic object that blocks all actors by default. All new custom channels will use its own default response. ",bCanModify=False)
@@ -58,12 +61,14 @@ AppliedDefaultGraphicsPerformance=Maximum
 +Profiles=(Name="UI",CollisionEnabled=QueryOnly,bCanModify=False,ObjectTypeName="WorldDynamic",CustomResponses=((Channel="WorldStatic",Response=ECR_Overlap),(Channel="WorldDynamic",Response=ECR_Overlap),(Channel="Pawn",Response=ECR_Overlap),(Channel="Camera",Response=ECR_Overlap),(Channel="PhysicsBody",Response=ECR_Overlap),(Channel="Vehicle",Response=ECR_Overlap),(Channel="Destructible",Response=ECR_Overlap)),HelpMessage="WorldStatic object that overlaps all actors by default. All new custom channels will use its own default response. ")
 +Profiles=(Name="pickups",CollisionEnabled=QueryAndPhysics,bCanModify=True,ObjectTypeName="pickups",CustomResponses=((Channel="WorldDynamic",Response=ECR_Overlap),(Channel="towerSeed",Response=ECR_Overlap)),HelpMessage="Needs description")
 +Profiles=(Name="floor",CollisionEnabled=QueryAndPhysics,bCanModify=True,ObjectTypeName="PhysicsBody",CustomResponses=((Channel="snowCollect")),HelpMessage="Needs description")
-+Profiles=(Name="towerSeed",CollisionEnabled=QueryAndPhysics,bCanModify=True,ObjectTypeName="towerSeed",CustomResponses=((Channel="snowCollect"),(Channel="floor",Response=ECR_Overlap)),HelpMessage="Needs description")
++Profiles=(Name="towerSeed",CollisionEnabled=QueryAndPhysics,bCanModify=True,ObjectTypeName="towerSeed",CustomResponses=((Channel="Pawn",Response=ECR_Ignore),(Channel="snowCollect"),(Channel="towerSeed",Response=ECR_Ignore),(Channel="floor",Response=ECR_Overlap)),HelpMessage="Needs description")
++Profiles=(Name="Tower",CollisionEnabled=QueryAndPhysics,bCanModify=True,ObjectTypeName="Tower",CustomResponses=,HelpMessage="")
 +DefaultChannelResponses=(Channel=ECC_GameTraceChannel1,DefaultResponse=ECR_Block,bTraceType=False,bStaticObject=False,Name="pickups")
 +DefaultChannelResponses=(Channel=ECC_GameTraceChannel2,DefaultResponse=ECR_Block,bTraceType=False,bStaticObject=False,Name="projectile")
 +DefaultChannelResponses=(Channel=ECC_GameTraceChannel3,DefaultResponse=ECR_Ignore,bTraceType=True,bStaticObject=False,Name="snowCollect")
 +DefaultChannelResponses=(Channel=ECC_GameTraceChannel4,DefaultResponse=ECR_Block,bTraceType=False,bStaticObject=False,Name="towerSeed")
 +DefaultChannelResponses=(Channel=ECC_GameTraceChannel5,DefaultResponse=ECR_Block,bTraceType=False,bStaticObject=False,Name="floor")
++DefaultChannelResponses=(Channel=ECC_GameTraceChannel6,DefaultResponse=ECR_Block,bTraceType=False,bStaticObject=False,Name="Tower")
 -ProfileRedirects=(OldName="BlockingVolume",NewName="InvisibleWall")
 -ProfileRedirects=(OldName="InterpActor",NewName="IgnoreOnlyPawn")
 -ProfileRedirects=(OldName="StaticMeshComponent",NewName="BlockAllDynamic")
@@ -85,5 +90,3 @@ AppliedDefaultGraphicsPerformance=Maximum
 +CollisionChannelRedirects=(OldName="floor",NewName="snowCollect")
 
 
-[/Script/Engine.RendererSettings]
-r.CustomDepth=3
