Tower Spawn added.

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -62,13 +62,13 @@ r.CustomDepth=3
 +Profiles=(Name="pickups",CollisionEnabled=QueryAndPhysics,bCanModify=True,ObjectTypeName="pickups",CustomResponses=((Channel="WorldDynamic",Response=ECR_Overlap),(Channel="towerSeed",Response=ECR_Overlap)),HelpMessage="Needs description")
 +Profiles=(Name="floor",CollisionEnabled=QueryAndPhysics,bCanModify=True,ObjectTypeName="PhysicsBody",CustomResponses=((Channel="snowCollect")),HelpMessage="Needs description")
 +Profiles=(Name="towerSeed",CollisionEnabled=QueryAndPhysics,bCanModify=True,ObjectTypeName="towerSeed",CustomResponses=((Channel="Pawn",Response=ECR_Ignore),(Channel="snowCollect"),(Channel="towerSeed",Response=ECR_Ignore),(Channel="floor",Response=ECR_Overlap)),HelpMessage="Needs description")
-+Profiles=(Name="Tower",CollisionEnabled=QueryAndPhysics,bCanModify=True,ObjectTypeName="Tower",CustomResponses=,HelpMessage="")
++Profiles=(Name="TowerPadding",CollisionEnabled=QueryAndPhysics,bCanModify=True,ObjectTypeName="TowerPadding",CustomResponses=((Channel="WorldStatic",Response=ECR_Ignore),(Channel="WorldDynamic",Response=ECR_Ignore),(Channel="Pawn",Response=ECR_Ignore),(Channel="Visibility",Response=ECR_Ignore),(Channel="Camera",Response=ECR_Ignore),(Channel="PhysicsBody",Response=ECR_Ignore),(Channel="Vehicle",Response=ECR_Ignore),(Channel="Destructible",Response=ECR_Ignore),(Channel="pickups",Response=ECR_Ignore),(Channel="projectile",Response=ECR_Ignore),(Channel="towerSeed",Response=ECR_Ignore),(Channel="floor",Response=ECR_Ignore),(Channel="TowerPadding",Response=ECR_Overlap)),HelpMessage="")
 +DefaultChannelResponses=(Channel=ECC_GameTraceChannel1,DefaultResponse=ECR_Block,bTraceType=False,bStaticObject=False,Name="pickups")
 +DefaultChannelResponses=(Channel=ECC_GameTraceChannel2,DefaultResponse=ECR_Block,bTraceType=False,bStaticObject=False,Name="projectile")
 +DefaultChannelResponses=(Channel=ECC_GameTraceChannel3,DefaultResponse=ECR_Ignore,bTraceType=True,bStaticObject=False,Name="snowCollect")
 +DefaultChannelResponses=(Channel=ECC_GameTraceChannel4,DefaultResponse=ECR_Block,bTraceType=False,bStaticObject=False,Name="towerSeed")
 +DefaultChannelResponses=(Channel=ECC_GameTraceChannel5,DefaultResponse=ECR_Block,bTraceType=False,bStaticObject=False,Name="floor")
-+DefaultChannelResponses=(Channel=ECC_GameTraceChannel6,DefaultResponse=ECR_Block,bTraceType=False,bStaticObject=False,Name="Tower")
++DefaultChannelResponses=(Channel=ECC_GameTraceChannel6,DefaultResponse=ECR_Ignore,bTraceType=False,bStaticObject=False,Name="TowerPadding")
 -ProfileRedirects=(OldName="BlockingVolume",NewName="InvisibleWall")
 -ProfileRedirects=(OldName="InterpActor",NewName="IgnoreOnlyPawn")
 -ProfileRedirects=(OldName="StaticMeshComponent",NewName="BlockAllDynamic")
@@ -79,6 +79,7 @@ r.CustomDepth=3
 +ProfileRedirects=(OldName="StaticMeshComponent",NewName="BlockAllDynamic")
 +ProfileRedirects=(OldName="SkeletalMeshActor",NewName="PhysicsActor")
 +ProfileRedirects=(OldName="InvisibleActor",NewName="InvisibleWallDynamic")
++ProfileRedirects=(OldName="Tower",NewName="TowerPadding")
 -CollisionChannelRedirects=(OldName="Static",NewName="WorldStatic")
 -CollisionChannelRedirects=(OldName="Dynamic",NewName="WorldDynamic")
 -CollisionChannelRedirects=(OldName="VehicleMovement",NewName="Vehicle")
@@ -88,5 +89,6 @@ r.CustomDepth=3
 +CollisionChannelRedirects=(OldName="VehicleMovement",NewName="Vehicle")
 +CollisionChannelRedirects=(OldName="PawnMovement",NewName="Pawn")
 +CollisionChannelRedirects=(OldName="floor",NewName="snowCollect")
++CollisionChannelRedirects=(OldName="Tower",NewName="TowerPadding")
 
 
