--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -90,17 +90,18 @@ DefaultViewportMouseCaptureMode=CapturePermanently_IncludingInitialMouseDown
 DefaultViewportMouseLockMode=LockOnCapture
 FOVScale=0.011110
 DoubleClickTime=0.200000
-+ActionMappings=(ActionName="Crouch",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftControl)
-+ActionMappings=(ActionName="Jump",bShift=False,bCtrl=True,bAlt=False,bCmd=False,Key=SpaceBar)
 +ActionMappings=(ActionName="Aim",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=RightMouseButton)
-+ActionMappings=(ActionName="Fire",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftMouseButton)
++ActionMappings=(ActionName="Build",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftAlt)
 +ActionMappings=(ActionName="Collect",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=F)
-+ActionMappings=(ActionName="Build",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=SpaceBar)
-+ActionMappings=(ActionName="Distract",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=C)
-+ActionMappings=(ActionName="SelectTower",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftShift)
++ActionMappings=(ActionName="Crouch",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftControl)
++ActionMappings=(ActionName="CustomMapping",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Tab)
 +ActionMappings=(ActionName="DestroyTower",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=MouseWheelAxis)
++ActionMappings=(ActionName="Distract",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=C)
++ActionMappings=(ActionName="Fire",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftMouseButton)
++ActionMappings=(ActionName="Jump",bShift=False,bCtrl=True,bAlt=False,bCmd=False,Key=SpaceBar)
 +ActionMappings=(ActionName="OpenMenu",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=E)
 +ActionMappings=(ActionName="OpenMenu",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Escape)
++ActionMappings=(ActionName="SelectTower",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftShift)
 +AxisMappings=(AxisName="LookUp",Scale=-1.000000,Key=MouseY)
 +AxisMappings=(AxisName="MoveForward",Scale=-1.000000,Key=S)
 +AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=W)
