--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -63,6 +63,7 @@ r.CustomDepth=3
 +Profiles=(Name="floor",CollisionEnabled=QueryAndPhysics,bCanModify=True,ObjectTypeName="PhysicsBody",CustomResponses=((Channel="snowCollect")),HelpMessage="Needs description")
 +Profiles=(Name="towerSeed",CollisionEnabled=QueryAndPhysics,bCanModify=True,ObjectTypeName="towerSeed",CustomResponses=((Channel="Pawn",Response=ECR_Ignore),(Channel="snowCollect"),(Channel="towerSeed",Response=ECR_Ignore),(Channel="floor",Response=ECR_Overlap)),HelpMessage="Needs description")
 +Profiles=(Name="TowerPadding",CollisionEnabled=QueryAndPhysics,bCanModify=True,ObjectTypeName="TowerPadding",CustomResponses=((Channel="WorldStatic",Response=ECR_Ignore),(Channel="WorldDynamic",Response=ECR_Ignore),(Channel="Pawn",Response=ECR_Ignore),(Channel="Visibility",Response=ECR_Ignore),(Channel="Camera",Response=ECR_Ignore),(Channel="PhysicsBody",Response=ECR_Ignore),(Channel="Vehicle",Response=ECR_Ignore),(Channel="Destructible",Response=ECR_Ignore),(Channel="pickups",Response=ECR_Ignore),(Channel="projectile",Response=ECR_Ignore),(Channel="towerSeed",Response=ECR_Ignore),(Channel="floor",Response=ECR_Ignore),(Channel="TowerPadding",Response=ECR_Overlap)),HelpMessage="")
++Profiles=(Name="enemyCapsule",CollisionEnabled=QueryAndPhysics,bCanModify=True,ObjectTypeName="Pawn",CustomResponses=((Channel="Visibility",Response=ECR_Ignore),(Channel="snowHit")),HelpMessage="Needs description")
 +DefaultChannelResponses=(Channel=ECC_GameTraceChannel1,DefaultResponse=ECR_Block,bTraceType=False,bStaticObject=False,Name="pickups")
 +DefaultChannelResponses=(Channel=ECC_GameTraceChannel2,DefaultResponse=ECR_Block,bTraceType=False,bStaticObject=False,Name="projectile")
 +DefaultChannelResponses=(Channel=ECC_GameTraceChannel3,DefaultResponse=ECR_Ignore,bTraceType=True,bStaticObject=False,Name="snowCollect")
@@ -70,7 +71,7 @@ r.CustomDepth=3
 +DefaultChannelResponses=(Channel=ECC_GameTraceChannel5,DefaultResponse=ECR_Block,bTraceType=False,bStaticObject=False,Name="floor")
 +DefaultChannelResponses=(Channel=ECC_GameTraceChannel6,DefaultResponse=ECR_Ignore,bTraceType=False,bStaticObject=False,Name="TowerPadding")
 +DefaultChannelResponses=(Channel=ECC_GameTraceChannel7,DefaultResponse=ECR_Ignore,bTraceType=True,bStaticObject=False,Name="snowHit")
-+EditProfiles=(Name="CharacterMesh",CustomResponses=((Channel="snowHit")))
++EditProfiles=(Name="CharacterMesh",CustomResponses=((Channel="snowHit",Response=ECR_Ignore)))
 -ProfileRedirects=(OldName="BlockingVolume",NewName="InvisibleWall")
 -ProfileRedirects=(OldName="InterpActor",NewName="IgnoreOnlyPawn")
 -ProfileRedirects=(OldName="StaticMeshComponent",NewName="BlockAllDynamic")
