--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,6 +1,6 @@
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/CC/ThirdPersonCPP/Maps/Start.Start
-EditorStartupMap=/Game/Maps/Terrain.Terrain
+GameDefaultMap=/Game/Maps/PlaytestTerrain.PlaytestTerrain
+EditorStartupMap=/Game/Maps/PlaytestTerrain.PlaytestTerrain
 GlobalDefaultGameMode=/Script/ProjectGoat.ProjectGoatGameMode
 
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
@@ -92,5 +92,3 @@ r.CustomDepth=3
 +CollisionChannelRedirects=(OldName="PawnMovement",NewName="Pawn")
 +CollisionChannelRedirects=(OldName="floor",NewName="snowCollect")
 +CollisionChannelRedirects=(OldName="Tower",NewName="TowerPadding")
-
-
