Frost Cannon rewritten.

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,6 +1,6 @@
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Maps/PlaytestTerrain.PlaytestTerrain
-EditorStartupMap=/Game/Maps/PlaytestTerrain.PlaytestTerrain
+GameDefaultMap=/Game/CC/ThirdPersonCPP/Maps/Start.Start
+EditorStartupMap=/Game/Maps/Terrain.Terrain
 GlobalDefaultGameMode=/Script/ProjectGoat.ProjectGoatGameMode
 
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
@@ -60,10 +60,11 @@ r.CustomDepth=3
 +Profiles=(Name="Vehicle",CollisionEnabled=QueryAndPhysics,bCanModify=False,ObjectTypeName="Vehicle",CustomResponses=,HelpMessage="Vehicle object that blocks Vehicle, WorldStatic, and WorldDynamic. All other channels will be set to default.")
 +Profiles=(Name="UI",CollisionEnabled=QueryOnly,bCanModify=False,ObjectTypeName="WorldDynamic",CustomResponses=((Channel="WorldStatic",Response=ECR_Overlap),(Channel="WorldDynamic",Response=ECR_Overlap),(Channel="Pawn",Response=ECR_Overlap),(Channel="Camera",Response=ECR_Overlap),(Channel="PhysicsBody",Response=ECR_Overlap),(Channel="Vehicle",Response=ECR_Overlap),(Channel="Destructible",Response=ECR_Overlap)),HelpMessage="WorldStatic object that overlaps all actors by default. All new custom channels will use its own default response. ")
 +Profiles=(Name="pickups",CollisionEnabled=QueryAndPhysics,bCanModify=True,ObjectTypeName="pickups",CustomResponses=((Channel="WorldStatic",Response=ECR_Ignore),(Channel="WorldDynamic",Response=ECR_Ignore),(Channel="Pawn",Response=ECR_Overlap),(Channel="Visibility",Response=ECR_Ignore),(Channel="Camera",Response=ECR_Ignore),(Channel="PhysicsBody",Response=ECR_Ignore),(Channel="Vehicle",Response=ECR_Ignore),(Channel="Destructible",Response=ECR_Ignore),(Channel="pickups",Response=ECR_Ignore),(Channel="projectile",Response=ECR_Ignore),(Channel="towerSeed",Response=ECR_Ignore),(Channel="floor",Response=ECR_Ignore)),HelpMessage="Needs description")
-+Profiles=(Name="floor",CollisionEnabled=QueryAndPhysics,bCanModify=True,ObjectTypeName="WorldStatic",CustomResponses=((Channel="snowCollect")),HelpMessage="Needs description")
++Profiles=(Name="floor",CollisionEnabled=QueryAndPhysics,bCanModify=True,ObjectTypeName="PhysicsBody",CustomResponses=((Channel="snowCollect")),HelpMessage="Needs description")
 +Profiles=(Name="towerSeed",CollisionEnabled=QueryAndPhysics,bCanModify=True,ObjectTypeName="towerSeed",CustomResponses=((Channel="Pawn",Response=ECR_Ignore),(Channel="snowCollect"),(Channel="towerSeed",Response=ECR_Ignore),(Channel="floor",Response=ECR_Overlap)),HelpMessage="Needs description")
 +Profiles=(Name="TowerPadding",CollisionEnabled=QueryAndPhysics,bCanModify=True,ObjectTypeName="TowerPadding",CustomResponses=((Channel="WorldStatic",Response=ECR_Ignore),(Channel="WorldDynamic",Response=ECR_Ignore),(Channel="Pawn",Response=ECR_Ignore),(Channel="Visibility",Response=ECR_Ignore),(Channel="Camera",Response=ECR_Ignore),(Channel="PhysicsBody",Response=ECR_Ignore),(Channel="Vehicle",Response=ECR_Ignore),(Channel="Destructible",Response=ECR_Ignore),(Channel="pickups",Response=ECR_Ignore),(Channel="projectile",Response=ECR_Ignore),(Channel="towerSeed",Response=ECR_Ignore),(Channel="floor",Response=ECR_Ignore),(Channel="TowerPadding",Response=ECR_Overlap)),HelpMessage="")
-+Profiles=(Name="enemyCapsule",CollisionEnabled=QueryAndPhysics,bCanModify=True,ObjectTypeName="Pawn",CustomResponses=((Channel="Visibility",Response=ECR_Ignore),(Channel="snowHit")),HelpMessage="Needs description")
++Profiles=(Name="enemyCapsule",CollisionEnabled=QueryAndPhysics,bCanModify=True,ObjectTypeName="enemyCapsule",CustomResponses=((Channel="Visibility",Response=ECR_Ignore),(Channel="snowHit"),(Channel="snowCapsule",Response=ECR_Overlap)),HelpMessage="Needs description")
++Profiles=(Name="snowCapsule",CollisionEnabled=QueryOnly,bCanModify=True,ObjectTypeName="snowCapsule",CustomResponses=((Channel="WorldStatic",Response=ECR_Ignore),(Channel="WorldDynamic",Response=ECR_Ignore),(Channel="Pawn",Response=ECR_Ignore),(Channel="Visibility",Response=ECR_Ignore),(Channel="Camera",Response=ECR_Ignore),(Channel="PhysicsBody",Response=ECR_Ignore),(Channel="Vehicle",Response=ECR_Ignore),(Channel="Destructible",Response=ECR_Ignore),(Channel="pickups",Response=ECR_Ignore),(Channel="projectile",Response=ECR_Ignore),(Channel="towerSeed",Response=ECR_Ignore),(Channel="floor",Response=ECR_Ignore)),HelpMessage="Needs description")
 +DefaultChannelResponses=(Channel=ECC_GameTraceChannel1,DefaultResponse=ECR_Block,bTraceType=False,bStaticObject=False,Name="pickups")
 +DefaultChannelResponses=(Channel=ECC_GameTraceChannel2,DefaultResponse=ECR_Block,bTraceType=False,bStaticObject=False,Name="projectile")
 +DefaultChannelResponses=(Channel=ECC_GameTraceChannel3,DefaultResponse=ECR_Ignore,bTraceType=True,bStaticObject=False,Name="snowCollect")
@@ -71,6 +72,8 @@ r.CustomDepth=3
 +DefaultChannelResponses=(Channel=ECC_GameTraceChannel5,DefaultResponse=ECR_Block,bTraceType=False,bStaticObject=False,Name="floor")
 +DefaultChannelResponses=(Channel=ECC_GameTraceChannel6,DefaultResponse=ECR_Ignore,bTraceType=False,bStaticObject=False,Name="TowerPadding")
 +DefaultChannelResponses=(Channel=ECC_GameTraceChannel7,DefaultResponse=ECR_Ignore,bTraceType=True,bStaticObject=False,Name="snowHit")
++DefaultChannelResponses=(Channel=ECC_GameTraceChannel8,DefaultResponse=ECR_Ignore,bTraceType=False,bStaticObject=False,Name="snowCapsule")
++DefaultChannelResponses=(Channel=ECC_GameTraceChannel9,DefaultResponse=ECR_Block,bTraceType=False,bStaticObject=False,Name="enemyCapsule")
 +EditProfiles=(Name="CharacterMesh",CustomResponses=((Channel="snowHit",Response=ECR_Ignore)))
 -ProfileRedirects=(OldName="BlockingVolume",NewName="InvisibleWall")
 -ProfileRedirects=(OldName="InterpActor",NewName="IgnoreOnlyPawn")
