--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,6 +1,6 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/CC/ThirdPersonCPP/Maps/Start.Start
-EditorStartupMap=/Game/Maps/Terrain.Terrain
+EditorStartupMap=/Game/CC/ThirdPersonCPP/Maps/Start.Start
 GlobalDefaultGameMode=/Script/ProjectGoat.ProjectGoatGameMode
 
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
@@ -96,5 +96,4 @@ r.CustomDepth=3
 +CollisionChannelRedirects=(OldName="PawnMovement",NewName="Pawn")
 +CollisionChannelRedirects=(OldName="floor",NewName="snowCollect")
 +CollisionChannelRedirects=(OldName="Tower",NewName="TowerPadding")
-
 
