--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -97,7 +97,7 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="DestroyTower",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=MouseWheelAxis)
 +ActionMappings=(ActionName="Distract",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=C)
 +ActionMappings=(ActionName="Fire",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftMouseButton)
-+ActionMappings=(ActionName="Jump",bShift=False,bCtrl=True,bAlt=False,bCmd=False,Key=Z)
++ActionMappings=(ActionName="Jump",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Z)
 +ActionMappings=(ActionName="OpenMenu",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=E)
 +ActionMappings=(ActionName="OpenMenu",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Escape)
 +ActionMappings=(ActionName="SelectTower",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftShift)
