--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -101,6 +101,7 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="OpenMenu",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=E)
 +ActionMappings=(ActionName="OpenMenu",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Escape)
 +ActionMappings=(ActionName="SelectTower",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftShift)
++ActionMappings=(ActionName="AirStrike",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=One)
 +AxisMappings=(AxisName="LookUp",Scale=-1.000000,Key=MouseY)
 +AxisMappings=(AxisName="MoveForward",Scale=-1.000000,Key=S)
 +AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=W)
