Air strike tower revived !
Damage system needed to be fixed tho

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/Maps/Start.Start
 EditorStartupMap=/Game/John/JProtoMap.JProtoMap
-GlobalDefaultGameMode=/Script/ProjectGoat.ProjectGoatGameMode
+GlobalDefaultGameMode=/Game/Actors/BP_ProjectGoatGameMode.BP_ProjectGoatGameMode_C
 
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
 MinimumiOSVersion=IOS_11
@@ -99,5 +99,4 @@ r.CustomDepth=3
 +CollisionChannelRedirects=(OldName="PawnMovement",NewName="Pawn")
 +CollisionChannelRedirects=(OldName="floor",NewName="snowCollect")
 +CollisionChannelRedirects=(OldName="Tower",NewName="TowerPadding")
-
 
