new map done. HOWEVER game frozen at the fifth wave, dont know why.

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,5 +1,5 @@
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Maps/Start.Start
+GameDefaultMap=/Game/John/JSprialMap.JSprialMap
 EditorStartupMap=/Game/John/JProtoMap.JProtoMap
 GlobalDefaultGameMode=/Game/Actors/BP_ProjectGoatGameMode.BP_ProjectGoatGameMode_C
 
@@ -105,5 +105,4 @@ r.CustomDepth=3
 +CollisionChannelRedirects=(OldName="PawnMovement",NewName="Pawn")
 +CollisionChannelRedirects=(OldName="floor",NewName="snowCollect")
 +CollisionChannelRedirects=(OldName="Tower",NewName="TowerCapsule")
-
 
