Collect coin prototyped/

--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -102,6 +102,7 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="OpenMenu",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Escape)
 +ActionMappings=(ActionName="SelectTower",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftShift)
 +ActionMappings=(ActionName="AirStrike",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=One)
++ActionMappings=(ActionName="CollectGold",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Two)
 +AxisMappings=(AxisName="LookUp",Scale=-1.000000,Key=MouseY)
 +AxisMappings=(AxisName="MoveForward",Scale=-1.000000,Key=S)
 +AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=W)
