Splitting route implemented.

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -22,6 +22,9 @@ AppliedDefaultGraphicsPerformance=Maximum
 [/Script/Engine.RendererSettings]
 r.CustomDepth=3
 
+[/Script/AIModule.AISystem]
+bAllowControllersAsEQSQuerier=True
+
 [/Script/Engine.CollisionProfile]
 -Profiles=(Name="NoCollision",CollisionEnabled=NoCollision,ObjectTypeName="WorldStatic",CustomResponses=((Channel="Visibility",Response=ECR_Ignore),(Channel="Camera",Response=ECR_Ignore)),HelpMessage="No collision",bCanModify=False)
 -Profiles=(Name="BlockAll",CollisionEnabled=QueryAndPhysics,ObjectTypeName="WorldStatic",CustomResponses=,HelpMessage="WorldStatic object that blocks all actors by default. All new custom channels will use its own default response. ",bCanModify=False)
@@ -78,7 +81,7 @@ r.CustomDepth=3
 +DefaultChannelResponses=(Channel=ECC_GameTraceChannel10,DefaultResponse=ECR_Ignore,bTraceType=True,bStaticObject=False,Name="BuildTrace")
 +DefaultChannelResponses=(Channel=ECC_GameTraceChannel11,DefaultResponse=ECR_Ignore,bTraceType=False,bStaticObject=False,Name="ConstructionArea")
 +DefaultChannelResponses=(Channel=ECC_GameTraceChannel12,DefaultResponse=ECR_Overlap,bTraceType=False,bStaticObject=False,Name="TowerCapsule")
-+EditProfiles=(Name="CharacterMesh",CustomResponses=((Channel="snowHit",Response=ECR_Ignore),(Channel="Camera",Response=ECR_Ignore)))
++EditProfiles=(Name="CharacterMesh",CustomResponses=((Channel="snowHit",Response=ECR_Ignore),(Channel="Camera",Response=ECR_Ignore),(Channel="enemyCapsule",Response=ECR_Overlap)))
 +EditProfiles=(Name="OverlapAllDynamic",CustomResponses=((Channel="enemyCapsule",Response=ECR_Overlap)))
 +EditProfiles=(Name="Pawn",CustomResponses=((Channel="WorldDynamic",Response=ECR_Overlap),(Channel="Pawn",Response=ECR_Overlap),(Channel="Destructible",Response=ECR_Overlap),(Channel="pickups",Response=ECR_Overlap),(Channel="projectile",Response=ECR_Ignore),(Channel="Camera",Response=ECR_Ignore),(Channel="BuildTrace"),(Channel="TowerCapsule")))
 +EditProfiles=(Name="BlockAllDynamic",CustomResponses=((Channel="Camera",Response=ECR_Ignore)))
