New Map implemented

--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -91,18 +91,18 @@ DefaultViewportMouseLockMode=LockOnCapture
 FOVScale=0.011110
 DoubleClickTime=0.200000
 +ActionMappings=(ActionName="Aim",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=RightMouseButton)
-+ActionMappings=(ActionName="Build",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=SpaceBar)
++ActionMappings=(ActionName="Build",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftAlt)
 +ActionMappings=(ActionName="Collect",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=F)
 +ActionMappings=(ActionName="Crouch",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftControl)
 +ActionMappings=(ActionName="DestroyTower",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=MouseWheelAxis)
 +ActionMappings=(ActionName="Distract",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=C)
 +ActionMappings=(ActionName="Fire",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftMouseButton)
-+ActionMappings=(ActionName="Jump",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Z)
-+ActionMappings=(ActionName="OpenMenu",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=E)
++ActionMappings=(ActionName="Jump",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=SpaceBar)
 +ActionMappings=(ActionName="OpenMenu",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Escape)
 +ActionMappings=(ActionName="SelectTower",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftShift)
 +ActionMappings=(ActionName="AirStrike",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=One)
 +ActionMappings=(ActionName="CollectGold",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Two)
++ActionMappings=(ActionName="FastForward",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Y)
 +AxisMappings=(AxisName="LookUp",Scale=-1.000000,Key=MouseY)
 +AxisMappings=(AxisName="MoveForward",Scale=-1.000000,Key=S)
 +AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=W)
