Playtest Version for 7/7/2020

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,5 +1,5 @@
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/John/JSprialMap.JSprialMap
+GameDefaultMap=/Game/Tom/Terrain_Edits.Terrain_Edits
 EditorStartupMap=/Game/John/JProtoMap.JProtoMap
 GlobalDefaultGameMode=/Game/Actors/BP_ProjectGoatGameMode.BP_ProjectGoatGameMode_C
 
@@ -108,5 +108,4 @@ bAllowControllersAsEQSQuerier=True
 +CollisionChannelRedirects=(OldName="PawnMovement",NewName="Pawn")
 +CollisionChannelRedirects=(OldName="floor",NewName="snowCollect")
 +CollisionChannelRedirects=(OldName="Tower",NewName="TowerCapsule")
-
 
