fixed tower purchasing bug

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -109,4 +109,6 @@ bAllowControllersAsEQSQuerier=True
 +CollisionChannelRedirects=(OldName="floor",NewName="snowCollect")
 +CollisionChannelRedirects=(OldName="Tower",NewName="TowerCapsule")
 
+[/Script/NavigationSystem.RecastNavMesh]
+VerticalDeviationFromGroundCompensation=50.000000
 
