--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -21,6 +21,7 @@ AppliedDefaultGraphicsPerformance=Maximum
 
 [/Script/Engine.RendererSettings]
 r.CustomDepth=3
+r.DefaultFeature.AutoExposure=False
 
 [/Script/AIModule.AISystem]
 bAllowControllersAsEQSQuerier=True
