tower preview added.
changed tower in building mode also added.

--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,5 @@ Build
 *.xcworkspace
 *.spp
 *.reapeaks
+C:\Users\zhouc\Documents\Unreal Projects\GitProjectGoat\Content\Meadow_Environment_Set\Maps\Meadow_Environment_Set_Map_Overview_Map_BuiltData.uasset
+/Content/Meadow_Environment_Set/Maps/Meadow_Environment_Set_Map_Overview_Map_BuiltData.uasset
