title screen added, fix wave out of bound game breaking issue

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,5 +1,5 @@
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Tom/Terrain_Edits.Terrain_Edits
+GameDefaultMap=/Game/Maps/TitleScreen.TitleScreen
 EditorStartupMap=/Game/John/JProtoMap.JProtoMap
 GlobalDefaultGameMode=/Game/Character/BP_ProjectGoatGameMode.BP_ProjectGoatGameMode_C
 
@@ -112,3 +112,6 @@ bAllowControllersAsEQSQuerier=True
 
 [/Script/NavigationSystem.RecastNavMesh]
 VerticalDeviationFromGroundCompensation=50.000000
+
+[/Script/Engine.StreamingSettings]
+s.EventDrivenLoaderEnabled=False
