--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -26,6 +26,12 @@ r.DefaultFeature.AutoExposure=False
 [/Script/AIModule.AISystem]
 bAllowControllersAsEQSQuerier=True
 
+[/Script/NavigationSystem.RecastNavMesh]
+VerticalDeviationFromGroundCompensation=50.000000
+
+[/Script/Engine.StreamingSettings]
+s.EventDrivenLoaderEnabled=False
+
 [/Script/Engine.CollisionProfile]
 -Profiles=(Name="NoCollision",CollisionEnabled=NoCollision,ObjectTypeName="WorldStatic",CustomResponses=((Channel="Visibility",Response=ECR_Ignore),(Channel="Camera",Response=ECR_Ignore)),HelpMessage="No collision",bCanModify=False)
 -Profiles=(Name="BlockAll",CollisionEnabled=QueryAndPhysics,ObjectTypeName="WorldStatic",CustomResponses=,HelpMessage="WorldStatic object that blocks all actors by default. All new custom channels will use its own default response. ",bCanModify=False)
@@ -69,7 +75,7 @@ bAllowControllersAsEQSQuerier=True
 +Profiles=(Name="TowerPadding",CollisionEnabled=QueryAndPhysics,bCanModify=True,ObjectTypeName="TowerPadding",CustomResponses=((Channel="WorldDynamic",Response=ECR_Ignore),(Channel="Pawn",Response=ECR_Ignore),(Channel="Visibility",Response=ECR_Ignore),(Channel="Camera",Response=ECR_Ignore),(Channel="PhysicsBody",Response=ECR_Ignore),(Channel="Vehicle",Response=ECR_Ignore),(Channel="Destructible",Response=ECR_Ignore),(Channel="pickups",Response=ECR_Ignore),(Channel="projectile",Response=ECR_Ignore),(Channel="towerSeed",Response=ECR_Ignore),(Channel="floor",Response=ECR_Ignore),(Channel="TowerPadding"),(Channel="enemyCapsule",Response=ECR_Overlap)),HelpMessage="")
 +Profiles=(Name="enemyCapsule",CollisionEnabled=QueryAndPhysics,bCanModify=True,ObjectTypeName="enemyCapsule",CustomResponses=((Channel="WorldDynamic",Response=ECR_Overlap),(Channel="Pawn",Response=ECR_Overlap),(Channel="Visibility",Response=ECR_Ignore),(Channel="Camera",Response=ECR_Ignore),(Channel="pickups",Response=ECR_Overlap),(Channel="projectile",Response=ECR_Overlap),(Channel="towerSeed",Response=ECR_Overlap),(Channel="snowHit",Response=ECR_Overlap),(Channel="snowCapsule",Response=ECR_Overlap),(Channel="enemyCapsule",Response=ECR_Ignore)),HelpMessage="Needs description")
 +Profiles=(Name="snowCapsule",CollisionEnabled=QueryOnly,bCanModify=True,ObjectTypeName="snowCapsule",CustomResponses=((Channel="WorldStatic",Response=ECR_Ignore),(Channel="WorldDynamic",Response=ECR_Ignore),(Channel="Pawn",Response=ECR_Ignore),(Channel="Visibility",Response=ECR_Ignore),(Channel="Camera",Response=ECR_Ignore),(Channel="PhysicsBody",Response=ECR_Ignore),(Channel="Vehicle",Response=ECR_Ignore),(Channel="Destructible",Response=ECR_Ignore),(Channel="pickups",Response=ECR_Ignore),(Channel="projectile",Response=ECR_Ignore),(Channel="towerSeed",Response=ECR_Ignore),(Channel="floor",Response=ECR_Ignore)),HelpMessage="Needs description")
-+Profiles=(Name="TowerPreset",CollisionEnabled=QueryAndPhysics,bCanModify=True,ObjectTypeName="TowerCapsule",CustomResponses=((Channel="Visibility",Response=ECR_Ignore),(Channel="Camera",Response=ECR_Ignore),(Channel="BuildTrace"),(Channel="ConstructionArea",Response=ECR_Overlap),(Channel="TowerCapsule")),HelpMessage="Needs description")
++Profiles=(Name="TowerPreset",CollisionEnabled=QueryAndPhysics,bCanModify=True,ObjectTypeName="TowerCapsule",CustomResponses=((Channel="WorldDynamic",Response=ECR_Overlap),(Channel="Visibility",Response=ECR_Ignore),(Channel="Camera",Response=ECR_Ignore),(Channel="BuildTrace"),(Channel="ConstructionArea",Response=ECR_Overlap),(Channel="TowerCapsule")),HelpMessage="Needs description")
 +DefaultChannelResponses=(Channel=ECC_GameTraceChannel1,DefaultResponse=ECR_Block,bTraceType=False,bStaticObject=False,Name="pickups")
 +DefaultChannelResponses=(Channel=ECC_GameTraceChannel2,DefaultResponse=ECR_Block,bTraceType=False,bStaticObject=False,Name="projectile")
 +DefaultChannelResponses=(Channel=ECC_GameTraceChannel3,DefaultResponse=ECR_Ignore,bTraceType=True,bStaticObject=False,Name="snowCollect")
@@ -110,8 +116,4 @@ bAllowControllersAsEQSQuerier=True
 +CollisionChannelRedirects=(OldName="floor",NewName="snowCollect")
 +CollisionChannelRedirects=(OldName="Tower",NewName="TowerCapsule")
 
-[/Script/NavigationSystem.RecastNavMesh]
-VerticalDeviationFromGroundCompensation=50.000000
 
-[/Script/Engine.StreamingSettings]
-s.EventDrivenLoaderEnabled=False
