--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -30,7 +30,8 @@ bAllowControllersAsEQSQuerier=True
 VerticalDeviationFromGroundCompensation=50.000000
 
 [/Script/Engine.StreamingSettings]
-s.EventDrivenLoaderEnabled=False
+s.EventDrivenLoaderEnabled=True
+s.AsyncLoadingThreadEnabled=True
 
 [/Script/Engine.CollisionProfile]
 -Profiles=(Name="NoCollision",CollisionEnabled=NoCollision,ObjectTypeName="WorldStatic",CustomResponses=((Channel="Visibility",Response=ECR_Ignore),(Channel="Camera",Response=ECR_Ignore)),HelpMessage="No collision",bCanModify=False)
@@ -115,4 +116,25 @@ s.EventDrivenLoaderEnabled=False
 +CollisionChannelRedirects=(OldName="PawnMovement",NewName="Pawn")
 +CollisionChannelRedirects=(OldName="floor",NewName="snowCollect")
 +CollisionChannelRedirects=(OldName="Tower",NewName="TowerCapsule")
+
+[/Script/Engine.AnimationSettings]
+CompressCommandletVersion=3
++KeyEndEffectorsMatchNameArray=IK
++KeyEndEffectorsMatchNameArray=Hand
++KeyEndEffectorsMatchNameArray=ik_hand_l
++KeyEndEffectorsMatchNameArray=ik_hand_r
++KeyEndEffectorsMatchNameArray=Dragon_BIP-wing_left04
+ForceRecompression=True
+bOnlyCheckForMissingSkeletalMeshes=False
+bForceBelowThreshold=False
+bFirstRecompressUsingCurrentOrDefault=True
+bRaiseMaxErrorToExisting=False
+bEnablePerformanceLog=False
+bStripAnimationDataOnDedicatedServer=False
+bTickAnimationOnSkeletalMeshInit=False
+
+[Core.Log]
+LogStreaming = Verbose
+LogConfig=Verbose
+LogProperty=Verbose
 
