--- a/.gitignore
+++ b/.gitignore
@@ -15,5 +15,6 @@ Build
 *.xcworkspace
 *.spp
 *.reapeaks
+*.assbin
 C:\Users\zhouc\Documents\Unreal Projects\GitProjectGoat\Content\Meadow_Environment_Set\Maps\Meadow_Environment_Set_Map_Overview_Map_BuiltData.uasset
 /Content/Meadow_Environment_Set/Maps/Meadow_Environment_Set_Map_Overview_Map_BuiltData.uasset
