--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -22,6 +22,8 @@ AppliedDefaultGraphicsPerformance=Maximum
 [/Script/Engine.RendererSettings]
 r.CustomDepth=3
 r.DefaultFeature.AutoExposure=False
+r.DefaultFeature.Bloom=True
+r.DefaultFeature.AmbientOcclusion=True
 
 [/Script/AIModule.AISystem]
 bAllowControllersAsEQSQuerier=True
