--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -24,6 +24,9 @@ r.CustomDepth=3
 r.DefaultFeature.AutoExposure=False
 r.DefaultFeature.Bloom=True
 r.DefaultFeature.AmbientOcclusion=True
+r.MobileHDR=True
+r.TemporalAA.Upsampling=False
+r.DefaultFeature.LensFlare=False
 
 [/Script/AIModule.AISystem]
 bAllowControllersAsEQSQuerier=True
