--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -27,6 +27,7 @@ r.DefaultFeature.AmbientOcclusion=True
 r.MobileHDR=True
 r.TemporalAA.Upsampling=False
 r.DefaultFeature.LensFlare=False
+r.SupportSkyAtmosphereAffectsHeightFog=True
 
 [/Script/AIModule.AISystem]
 bAllowControllersAsEQSQuerier=True
