--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-Binaries
+aBinaries
 DerivedDataCache
 Intermediate
 Saved
@@ -20,3 +20,4 @@ Build
 *.xcf
 C:\Users\zhouc\Documents\Unreal Projects\GitProjectGoat\Content\Meadow_Environment_Set\Maps\Meadow_Environment_Set_Map_Overview_Map_BuiltData.uasset
 /Content/Meadow_Environment_Set/Maps/Meadow_Environment_Set_Map_Overview_Map_BuiltData.uasset
+Sub_Environment_Assets_BuiltData.uasset
