TutorialMap.umap prototyped

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,6 +1,6 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/Maps/TitleScreen.TitleScreen
-EditorStartupMap=/Game/John/JProtoMap.JProtoMap
+EditorStartupMap=/Game/Maps/TutorialMap.TutorialMap
 GlobalDefaultGameMode=/Game/Character/BP_ProjectGoatGameMode.BP_ProjectGoatGameMode_C
 
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
