--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -11,6 +11,7 @@ MinimumiOSVersion=IOS_11
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_ThirdPerson",NewGameName="/Script/ProjectGoat")
 +ActiveClassRedirects=(OldClassName="TP_ThirdPersonGameMode",NewClassName="ProjectGoatGameMode")
 +ActiveClassRedirects=(OldClassName="TP_ThirdPersonCharacter",NewClassName="ProjectGoatCharacter")
+GameScreenshotSaveDirectory=(Path="D:/Local/Captures")
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
