--- a/ProjectGoat.uproject
+++ b/ProjectGoat.uproject
@@ -31,6 +31,11 @@
 		{
 			"Name": "WebBrowserWidget",
 			"Enabled": true
+		},
+		{
+			"Name": "PhysicalLayout",
+			"Enabled": true,
+			"MarketplaceURL": "com.epicgames.launcher://ue/marketplace/product/349bf2d4b1a945fa8f31db80fabf8058"
 		}
 	],
 	"TargetPlatforms": [
