fastforward disabled during construction mode.

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -96,6 +96,7 @@ s.AsyncLoadingThreadEnabled=True
 +DefaultChannelResponses=(Channel=ECC_GameTraceChannel10,DefaultResponse=ECR_Ignore,bTraceType=True,bStaticObject=False,Name="BuildTrace")
 +DefaultChannelResponses=(Channel=ECC_GameTraceChannel11,DefaultResponse=ECR_Ignore,bTraceType=False,bStaticObject=False,Name="ConstructionArea")
 +DefaultChannelResponses=(Channel=ECC_GameTraceChannel12,DefaultResponse=ECR_Overlap,bTraceType=False,bStaticObject=False,Name="TowerCapsule")
++DefaultChannelResponses=(Channel=ECC_GameTraceChannel13,DefaultResponse=ECR_Block,bTraceType=True,bStaticObject=False,Name="ShellCaseChannel")
 +EditProfiles=(Name="CharacterMesh",CustomResponses=((Channel="snowHit",Response=ECR_Ignore),(Channel="Camera",Response=ECR_Ignore),(Channel="enemyCapsule",Response=ECR_Overlap)))
 +EditProfiles=(Name="OverlapAllDynamic",CustomResponses=((Channel="enemyCapsule",Response=ECR_Overlap)))
 +EditProfiles=(Name="Pawn",CustomResponses=((Channel="WorldDynamic",Response=ECR_Overlap),(Channel="Pawn",Response=ECR_Overlap),(Channel="Destructible",Response=ECR_Overlap),(Channel="pickups",Response=ECR_Overlap),(Channel="projectile",Response=ECR_Ignore),(Channel="Camera",Response=ECR_Ignore),(Channel="BuildTrace"),(Channel="TowerCapsule")))
