UI Pass 2.2 & Fixing Mortar tower rotation

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -12,6 +12,10 @@ MinimumiOSVersion=IOS_11
 +ActiveClassRedirects=(OldClassName="TP_ThirdPersonGameMode",NewClassName="ProjectGoatGameMode")
 +ActiveClassRedirects=(OldClassName="TP_ThirdPersonCharacter",NewClassName="ProjectGoatCharacter")
 GameScreenshotSaveDirectory=(Path="D:/Local/Captures")
+MediumFontName=None
+LargeFontName=None
+SmallFontName=None
+TinyFontName=None
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
