save & load prototyped. Only works on protomap.
Save: saves the current gold count, press x to save
Load: loads the last save's gold count, press z to load

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,6 +2,7 @@
 GameDefaultMap=/Game/Maps/TitleScreen.TitleScreen
 EditorStartupMap=/Game/Maps/TutorialMap.TutorialMap
 GlobalDefaultGameMode=/Game/Character/BP_ProjectGoatGameMode.BP_ProjectGoatGameMode_C
+GameInstanceClass=/Game/Character/CoreBP/BP_BulkheadGameInstance.BP_BulkheadGameInstance_C
 
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
 MinimumiOSVersion=IOS_11
