Mortar Sound pass

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -109,7 +109,7 @@ s.AsyncLoadingThreadEnabled=True
 +EditProfiles=(Name="Pawn",CustomResponses=((Channel="WorldDynamic",Response=ECR_Overlap),(Channel="Pawn",Response=ECR_Overlap),(Channel="Destructible",Response=ECR_Overlap),(Channel="pickups",Response=ECR_Overlap),(Channel="projectile",Response=ECR_Ignore),(Channel="Camera",Response=ECR_Ignore),(Channel="BuildTrace"),(Channel="TowerCapsule")))
 +EditProfiles=(Name="BlockAllDynamic",CustomResponses=((Channel="Camera",Response=ECR_Ignore),(Channel="ShellCaseChannel",Response=ECR_Ignore)))
 +EditProfiles=(Name="BlockAll",CustomResponses=((Channel="TowerCapsule"),(Channel="ShellCaseChannel",Response=ECR_Ignore)))
-+EditProfiles=(Name="NoCollision",CustomResponses=((Channel="ShellCaseChannel",Response=ECR_Ignore)))
++EditProfiles=(Name="NoCollision",CustomResponses=((Channel="ShellCaseChannel",Response=ECR_Ignore),(Channel="projectile",Response=ECR_Ignore)))
 +EditProfiles=(Name="OverlapAll",CustomResponses=((Channel="ShellCaseChannel",Response=ECR_Ignore)))
 -ProfileRedirects=(OldName="BlockingVolume",NewName="InvisibleWall")
 -ProfileRedirects=(OldName="InterpActor",NewName="IgnoreOnlyPawn")
