--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -90,6 +90,7 @@ s.AsyncLoadingThreadEnabled=True
 +Profiles=(Name="snowCapsule",CollisionEnabled=QueryOnly,bCanModify=True,ObjectTypeName="snowCapsule",CustomResponses=((Channel="WorldStatic",Response=ECR_Ignore),(Channel="WorldDynamic",Response=ECR_Ignore),(Channel="Pawn",Response=ECR_Ignore),(Channel="Visibility",Response=ECR_Ignore),(Channel="Camera",Response=ECR_Ignore),(Channel="PhysicsBody",Response=ECR_Ignore),(Channel="Vehicle",Response=ECR_Ignore),(Channel="Destructible",Response=ECR_Ignore),(Channel="pickups",Response=ECR_Ignore),(Channel="projectile",Response=ECR_Ignore),(Channel="towerSeed",Response=ECR_Ignore),(Channel="floor",Response=ECR_Ignore)),HelpMessage="Needs description")
 +Profiles=(Name="TowerPreset",CollisionEnabled=QueryAndPhysics,bCanModify=True,ObjectTypeName="TowerCapsule",CustomResponses=((Channel="WorldDynamic",Response=ECR_Overlap),(Channel="Visibility",Response=ECR_Ignore),(Channel="Camera",Response=ECR_Ignore),(Channel="BuildTrace"),(Channel="ConstructionArea",Response=ECR_Overlap),(Channel="TowerCapsule")),HelpMessage="Needs description")
 +Profiles=(Name="Tree",CollisionEnabled=QueryAndPhysics,bCanModify=True,ObjectTypeName="Destructible",CustomResponses=((Channel="WorldStatic",Response=ECR_Overlap),(Channel="WorldDynamic",Response=ECR_Overlap),(Channel="Visibility",Response=ECR_Overlap),(Channel="Camera",Response=ECR_Overlap),(Channel="PhysicsBody",Response=ECR_Overlap),(Channel="Vehicle",Response=ECR_Overlap),(Channel="Destructible",Response=ECR_Overlap),(Channel="enemyCapsule",Response=ECR_Overlap),(Channel="BuildTrace",Response=ECR_Overlap),(Channel="ShellCaseChannel",Response=ECR_Ignore)),HelpMessage="Needs description")
++Profiles=(Name="Fence",CollisionEnabled=QueryAndPhysics,bCanModify=True,ObjectTypeName="WorldStatic",CustomResponses=((Channel="TowerCapsule",Response=ECR_Ignore),(Channel="ShellCaseChannel",Response=ECR_Ignore)),HelpMessage="Needs description")
 +DefaultChannelResponses=(Channel=ECC_GameTraceChannel1,DefaultResponse=ECR_Block,bTraceType=False,bStaticObject=False,Name="pickups")
 +DefaultChannelResponses=(Channel=ECC_GameTraceChannel2,DefaultResponse=ECR_Block,bTraceType=False,bStaticObject=False,Name="projectile")
 +DefaultChannelResponses=(Channel=ECC_GameTraceChannel3,DefaultResponse=ECR_Ignore,bTraceType=True,bStaticObject=False,Name="snowCollect")
@@ -123,6 +124,7 @@ s.AsyncLoadingThreadEnabled=True
 +ProfileRedirects=(OldName="InvisibleActor",NewName="InvisibleWallDynamic")
 +ProfileRedirects=(OldName="Tower",NewName="TowerPadding")
 +ProfileRedirects=(OldName="floor",NewName="ConstructionArea")
++ProfileRedirects=(OldName="Fences",NewName="Fence")
 -CollisionChannelRedirects=(OldName="Static",NewName="WorldStatic")
 -CollisionChannelRedirects=(OldName="Dynamic",NewName="WorldDynamic")
 -CollisionChannelRedirects=(OldName="VehicleMovement",NewName="Vehicle")
